--- a/anio_y_tiempo/index.html
+++ b/anio_y_tiempo/index.html
@@ -15,7 +15,8 @@
     </style>
   </head>
   <body>
-    
+    <h2 class="mt-2">Evolución del promedio de horas por misión</h2>
+    <p class="fs-5 text-secondary">En la década del 2010, dividido por género.</p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
