--- a/mujeres_y_hombres/index.html
+++ b/mujeres_y_hombres/index.html
@@ -17,12 +17,16 @@
     </style>
   </head>
   <body>
-    
     <h2 class="mt-2 text-decoration-underline">Cantidad de astronautas por año</h2>
     <p class="fs-5 text-secondary">En la década del 2010, dividido por género.</p>
     <div id="chart" class=" mt-3"></div>
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
+    <div>
+      <a href="../index.html">
+        <img src="/assets/casa.png" alt="Volver">
+      </a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
