--- a/anio_y_tiempo/index.html
+++ b/anio_y_tiempo/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Chart 01 - X</title>
+    <link rel="stylesheet" href="style.css"/>
     <style>
       #chart{
         overflow-y:auto;
@@ -15,13 +17,19 @@
     </style>
   </head>
   <body>
-    <h2 class="mt-2">Evolución del promedio de horas por misión</h2>
     <p class="fs-5 text-secondary">En la década del 2010, dividido por género.</p>
-    <div id="chart"></div>
+
+    <h2 class="mt-2">Cronología y análisis de las misiones espaciales tripuladas</h2>
+    <p class="fs-5 text-secondary">La duracion de la mision y las actividades extravehiculares en relacion a las nacionalidades y años de nacimiento de los respectivos astronautas</p>
+    <div id="chart" class=" mt-3"></div>
+    <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
+    <p><i>Fuente: astronautas.csv</i></p>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  
   </body>
 </html>
