--- a/genero_x_tiempo/index.html
+++ b/genero_x_tiempo/index.html
@@ -14,6 +14,12 @@
       #chart svg{
         max-width: initial;
       }
+      /* body{
+        font-family: "Exo";
+        /* color: #f2f7; */
+        margin: 0;
+        padding: 0;
+      } */
     </style>
   </head>
   <body>
