--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"/>
 </head>
-  <body style="background-color:#1b50a5">
-    <!-- <a href="/anio_y_tiempo/index.html">Graf 1</a>
+  <body style="background-color:#91B4EB">
+    <!-- <a href="/anio_y_tießmpo/index.html">Graf 1</a>
     <a href="/genero_x_tiempo/index.html">Graf 2</a>
     <a href="/horas_x_ocupacion/index.html">Graf 3</a>
-    <a href="/mujeres_y_hombres/index.html">Graf 4</a> -->
+    <a href="/mujeres_y_hombres/indßex.html">Graf 4</a> -->
 
     <div class="mt-3 flex-row justify-content-center">
-      <h3 class="text-light text-center">Trabajo practico 1: Explicar con datos</h1>
+      <h2 class="text-light text-center">Trabajo practico 1: Explicar con datos</h1>
       <h5 class="text-light text-center">Realizado por Valentina De Diego y Gonzalo Dan Slucki</h5>
     </div>
  
@@ -23,9 +23,9 @@
         <div class="col-sm-4 mb-3 mb-sm-0">
           <div class="card bg-dark text-light">
             <div class="card-body">
-              <h5 class="card-title">Horas por mision</h5>
+              <h5 class="card-title">Horas por misión</h5>
               <p class="card-text">Evolución del promedio de horas por misión. En la década del 2010, dividido por género.</p>
-              <a href="/genero_x_tiempo/index.html" class="btn btn-light float-right">Ver el grafico</a>
+              <a href="/genero_x_tiempo/index.html" class="btn btn-light float-right">Ver el gráfico</a>
             </div>
           </div>
         </div>
@@ -34,7 +34,7 @@
             <div class="card-body">
               <h5 class="card-title">Cantidad de astronautas</h5>
               <p class="card-text">Cantidad de astronautas por año en la década del 2010, dividido por género.</p>
-              <a href="/mujeres_y_hombres/index.html" class="btn btn-light">Ver el grafico</a>
+              <a href="/mujeres_y_hombres/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
@@ -44,18 +44,18 @@
         <div class="col-sm-4 mb-3 mb-sm-0">
           <div class="card bg-dark text-light">
             <div class="card-body">
-              <h5 class="card-title">Titulo</h5>
-              <p class="card-text">Subtitulo</p>
-              <a href="/anio_y_tiempo/index.html" class="btn btn-light">Ver el grafico</a>
+              <h5 class="card-title">Cronología de misiones</h5>
+              <p class="card-text">Análisis extenso de las nacionalidades, año de nacimiento de los astronautas, duración y otros aspectos de las misiones</p>
+              <a href="/anio_y_tiempo/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card bg-dark text-light">
             <div class="card-body ">
-              <h5 class="card-title">Titulo</h5>
-              <p class="card-text">Subtitulo</p>
-              <a href="/horas_x_ocupacion/index.html" class="btn btn-light">Ver el grafico</a>
+              <h5 class="card-title">Astronautas y su ocupacion</h5>
+              <p class="card-text">Duración de las misiones en las cuales participaron astronautas con distintas ocupaciones</p>
+              <a href="/horas_x_ocupacion/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
