Added new vis. Corrected styles and texts.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="col-sm-4 mb-3 mb-sm-0">
           <div class="card bg-dark text-light">
             <div class="card-body">
-              <h5 class="card-title">Horas por misión</h5>
-              <p class="card-text">Evolución del promedio de horas por misión. En la década del 2010, dividido por género.</p>
+              <h5 class="card-title">El boom aeroespacial</h5>
+              <p class="card-text">Evolución del promedio de horas por misión en la década del 2010, dividido por género.</p>
               <a href="/genero_x_tiempo/index.html" class="btn btn-light float-right">Ver el gráfico</a>
             </div>
           </div>
@@ -32,7 +32,7 @@
         <div class="col-sm-4">
           <div class="card bg-dark text-light">
             <div class="card-body">
-              <h5 class="card-title">Cantidad de astronautas</h5>
+              <h5 class="card-title">Cada vez menos astronautas</h5>
               <p class="card-text">Cantidad de astronautas por año en la década del 2010, dividido por género.</p>
               <a href="/mujeres_y_hombres/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
@@ -53,9 +53,9 @@
         <div class="col-sm-4">
           <div class="card bg-dark text-light">
             <div class="card-body ">
-              <h5 class="card-title">Astronautas y su ocupacion</h5>
-              <p class="card-text">Duración de las misiones en las cuales participaron astronautas con distintas ocupaciones</p>
-              <a href="/horas_x_ocupacion/index.html" class="btn btn-light">Ver el gráfico</a>
+              <h5 class="card-title">No apto para todo público(+40)</h5>
+              <p class="card-text">Edad de los astronautas en la misión según el país.</p>
+              <a href="/edad_x_pais/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
