--- a/edad_x_pais/index.html
+++ b/edad_x_pais/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Visualizacion 3</title>
+    <title>Visualizacion 4</title>
     <link rel="stylesheet" href="style.css"/>
     <style>
       #chart{
@@ -14,12 +14,19 @@
       #chart svg{
         max-width: initial;
       }
+      /* body{
+        font-family: "Exo";
+         color: #f2f7; 
+        margin: 0;
+        padding: 0;
+      } */
     </style>
   </head>
-  <body>
-    <h2 class="mt-2">Cronología y análisis de las misiones espaciales tripuladas</h2>
-    <p class="fs-5 text-secondary">La duracion de la mision y las actividades extravehiculares en relacion a las nacionalidades y años de nacimiento de los respectivos astronautas</p>
-    <div id="chart" class=" mt-3"></div>
+  <body >
+    
+    <h2 class="mt-2 text-decoration-underline">No apto para todo público(+40) </h2>
+    <p class="fs-5 text-secondary">Edad de los astronautas en la misión según el país. En rojo, la media.</p>
+    <div id="chart" class=" mt-1"></div>
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
     <div class="mb-2">
@@ -33,6 +40,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  
+
   </body>
 </html>
