--- a/mujeres_y_hombres/index.html
+++ b/mujeres_y_hombres/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Chart 01 - X</title>
+    <title>Visualizacion 2</title>
     <link rel="stylesheet" href="../genero_x_tiempo/style.css"/>
     <style>
       #chart{
@@ -16,19 +16,19 @@
       }
       /* body{
         font-family: "Exo";
-        /* color: #f2f7; */
+        color: #f2f7; 
         margin: 0;
         padding: 0;
       } */
     </style>
   </head>
   <body>
-    <h2 class="mt-2 text-decoration-underline">Cantidad de astronautas por año</h2>
-    <p class="fs-5 text-secondary">En la década del 2010, dividido por género.</p>
+    <h2 class="mt-2 text-decoration-underline">Cada vez menos astronautas</h2>
+    <p class="fs-5 text-secondary">Cantidad de astronautas por año en la década del 2010, dividido por género.</p>
     <div id="chart" class=" mt-3"></div>
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
-    <div>
+    <div class="mb-2">
       <a href="../index.html">
         <img src="/assets/casa.png" alt="Volver">
       </a>
