Updated index links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="card-body">
               <h5 class="card-title">El boom aeroespacial</h5>
               <p class="card-text">Evolución del promedio de horas por misión en la década del 2010, dividido por género.</p>
-              <a href="/genero_x_tiempo/index.html" class="btn btn-light float-right">Ver el gráfico</a>
+              <a href="../Explicar_Con_Datos_tp2/genero_x_tiempo/index.html" class="btn btn-light float-right">Ver el gráfico</a>
             </div>
           </div>
         </div>
@@ -34,7 +34,7 @@
             <div class="card-body">
               <h5 class="card-title">Cada vez menos astronautas</h5>
               <p class="card-text">Cantidad de astronautas por año en la década del 2010, dividido por género.</p>
-              <a href="/mujeres_y_hombres/index.html" class="btn btn-light">Ver el gráfico</a>
+              <a href="../Explicar_Con_Datos_tp2/mujeres_y_hombres/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
             <div class="card-body">
               <h5 class="card-title">Cronología de misiones</h5>
               <p class="card-text">Análisis extenso de las nacionalidades, año de nacimiento de los astronautas, duración y otros aspectos de las misiones</p>
-              <a href="/anio_y_tiempo/index.html" class="btn btn-light">Ver el gráfico</a>
+              <a href="../Explicar_Con_Datos_tp2/anio_y_tiempo/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
@@ -55,7 +55,7 @@
             <div class="card-body ">
               <h5 class="card-title">No apto para todo público(+40)</h5>
               <p class="card-text">Edad de los astronautas en la misión según el país.</p>
-              <a href="/edad_x_pais/index.html" class="btn btn-light">Ver el gráfico</a>
+              <a href="../Explicar_Con_Datos_tp2/edad_x_pais/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
         </div>
