Fixed home image path

--- a/anio_y_tiempo/index.html
+++ b/anio_y_tiempo/index.html
@@ -24,7 +24,7 @@
     <p><i>Fuente: astronautas.csv</i></p>
     <div class="mb-2">
       <a href="../index.html">
-        <img src="/assets/casa.png" alt="Volver">
+        <img src="../../Explicar_Con_Datos_tp2/assets/casa.png" alt="Volver">
       </a>
     </div>
 
