--- a/anio_y_tiempo/index.html
+++ b/anio_y_tiempo/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Visualizacion 3</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
       #chart{
         overflow-y:auto;
@@ -17,14 +18,14 @@
     </style>
   </head>
   <body>
-    <h2 class="mt-2">Cronología y análisis de las misiones espaciales tripuladas</h2>
-    <p class="fs-5 text-secondary">La duracion de la mision y las actividades extravehiculares en relacion a las nacionalidades y años de nacimiento de los respectivos astronautas</p>
+    <h2 class="mt-2">El tiempo vuela en el espacio</h2>
+    <p class="fs-5 text-secondary">Cronología de las misiones espaciales segun su duración, las actividades extravehiculares, nacionalidades y años de nacimiento de los astronautas</p>
     <div id="chart" class=" mt-3"></div>
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
     <div class="mb-2">
-      <a href="../index.html">
-        <img src="../../Explicar_Con_Datos_tp2/assets/casa.png" alt="Volver">
+      <a href="../index.html" class="btn btn-outline-secondary">
+        <i class="bi bi-house"></i> Volver
       </a>
     </div>
 
