--- a/mujeres_y_hombres/index.html
+++ b/mujeres_y_hombres/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Visualizacion 2</title>
     <link rel="stylesheet" href="../genero_x_tiempo/style.css"/>
+    
     <style>
       #chart{
         overflow-y:auto;
@@ -14,12 +15,6 @@
       #chart svg{
         max-width: initial;
       }
-      /* body{
-        font-family: "Exo";
-        color: #f2f7; 
-        margin: 0;
-        padding: 0;
-      } */
     </style>
   </head>
   <body>
@@ -29,8 +24,8 @@
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
     <div class="mb-2">
-      <a href="../index.html">
-        <img src="../../Explicar_Con_Datos_tp2/assets/casa.png" alt="Volver">
+      <a href="../index.html" class="btn btn-outline-secondary">
+        <i class="bi bi-house"></i> Volver
       </a>
     </div>
 
