--- a/edad_x_pais/index.html
+++ b/edad_x_pais/index.html
@@ -19,7 +19,7 @@
   </head>
   <body >
     
-    <h2 class="mt-2 text-decoration-underline">No apto para todo público(+40) </h2>
+    <h2 class="mt-2 text-decoration-underline">Se requiere experiencia</h2>
     <p class="fs-5 text-secondary">Edad de los astronautas en la misión según el país. En rojo, la media.</p>
     <div id="chart" class=" mt-1"></div>
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
