--- a/genero_x_tiempo/index.html
+++ b/genero_x_tiempo/index.html
@@ -30,7 +30,7 @@
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
     <div class="mb-2">
-      <a href="../index.html">
+      <a href="../index.html" class="btn btn-outline-secondary">
         <img src="../../Explicar_Con_Datos_tp2/assets/casa.png" alt="Volver">
       </a>
     </div>
