--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-sm-4">
           <div class="card bg-dark text-light">
             <div class="card-body ">
-              <h5 class="card-title">No apto para todo público(+40)</h5>
+              <h5 class="card-title">Se requiere experiencia</h5>
               <p class="card-text">Edad de los astronautas en la misión según el país.</p>
               <a href="../Explicar_Con_Datos_tp2/edad_x_pais/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
