Fixed "volver" button

--- a/genero_x_tiempo/index.html
+++ b/genero_x_tiempo/index.html
@@ -31,7 +31,7 @@
     <p><i>Fuente: astronautas.csv</i></p>
     <div class="mb-2">
       <a href="../index.html" class="btn btn-outline-secondary">
-        <img src="../../Explicar_Con_Datos_tp2/assets/casa.png" alt="Volver">
+        Volver
       </a>
     </div>
 
