legend name etc

--- a/anio_y_tiempo/index.html
+++ b/anio_y_tiempo/index.html
@@ -17,9 +17,9 @@
       }
     </style>
   </head>
-  <body>
+  <body style="text-align: center;">
     <h2 class="mt-2">El tiempo vuela en el espacio</h2>
-    <p class="fs-5 text-secondary">Cronología de las misiones espaciales segun su duración, las actividades extravehiculares, nacionalidades y años de nacimiento de los astronautas</p>
+    <p class="fs-5 text-secondary">Cronología de las misiones espaciales según el año de nacimiento de los astronautas, indicando con la saturación de color las horas afuera de la nave y con el radio las horas dedicadas a las misiones.</p>
     <div id="chart" class=" mt-3"></div>
     <p class="mt-4"><i>Autores: Gonzalo Dan Slucki y Valentina De Diego</i></p>
     <p><i>Fuente: astronautas.csv</i></p>
