Update index and added readme button

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
   <body style="background-color:#91B4EB">
-    <!-- <a href="/anio_y_tießmpo/index.html">Graf 1</a>
-    <a href="/genero_x_tiempo/index.html">Graf 2</a>
-    <a href="/horas_x_ocupacion/index.html">Graf 3</a>
-    <a href="/mujeres_y_hombres/indßex.html">Graf 4</a> -->
-
     <div class="mt-3 flex-row justify-content-center">
       <h2 class="text-light text-center">Trabajo practico 1: Explicar con datos</h1>
       <h5 class="text-light text-center">Realizado por Valentina De Diego y Gonzalo Dan Slucki</h5>
@@ -45,7 +40,7 @@
           <div class="card bg-dark text-light">
             <div class="card-body">
               <h5 class="card-title">El tiempo vuela en el espacio</h5>
-              <p class="card-text">Cronología de las misiones según su duración, actividades extravehiculares, nacionalidades y nacimiento de los astronautas</p>
+              <p class="card-text">Análisis cronológico de la duración y esfuerzo físico demandado por las misiones</p>
               <a href="../Explicar_Con_Datos_tp2/anio_y_tiempo/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
           </div>
@@ -54,9 +49,16 @@
           <div class="card bg-dark text-light">
             <div class="card-body ">
               <h5 class="card-title">Se requiere experiencia</h5>
-              <p class="card-text">Edad de los astronautas en la misión según el país.</p>
+              <p class="card-text">Edad de los astronautas en la misión, dividido por país tomando únicamente los principales</p>
               <a href="../Explicar_Con_Datos_tp2/edad_x_pais/index.html" class="btn btn-light">Ver el gráfico</a>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <a href="https://github.com/gonzaslucki/Explicar_Con_Datos_tp2#trabajo-pr%C3%A1ctico-2-explicar-con-datos" class="btn btn-light">Ver Readme y Repo</a>
           </div>
         </div>
       </div>
