Added local zip and repo button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center">
-            <a href="https://github.com/gonzaslucki/Explicar_Con_Datos_tp2#trabajo-pr%C3%A1ctico-2-explicar-con-datos" class="btn btn-light">Ver Readme y Repo</a>
+            <a href="https://github.com/gonzaslucki/Explicar_Con_Datos_tp2#trabajo-pr%C3%A1ctico-2-explicar-con-datos" class="btn btn-light" target="_blank">Ver Readme y Repo</a>
           </div>
         </div>
       </div>
